# AIT42-Editor

./: .clippy.toml  .env.example  .gitignore  .rustfmt.toml  AIT42_V1.6.0_OPTIMIZATION_PROPOSAL.md  API_SPECIFICATION.md  BUG_FIX_REPORT.md  CARGO_WORKSPACE.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  CORE_IMPLEMENTATION_REPORT.md  COVERAGE_GAPS.md  CRITICAL_FIXES_SUMMARY.md  Cargo.toml  DEVELOPER_GUIDE.md  DISTRIBUTION.md  DISTRIBUTION_SETUP_COMPLETE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REVIEW.md  EXECUTIVE_SUMMARY.md  FILESYSTEM_IMPLEMENTATION_REPORT.md  FINAL_INTEGRATION_REPORT.md  FIXES_APPLIED.txt  FIXES_COMPETITION_DIALOG.md  GIT_COMMIT_MESSAGE.txt  HANDSHAKE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INIT_REPORT.md  INNOVATION_OPPORTUNITIES.md  INSTALL_MACOS.md  INTEGRATION_PHASE_IMPLEMENTATION.md  INTEGRATION_PHASE_SUMMARY.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SCENARIOS.md  IPC_PROTOCOL.md  LICENSE  NEXT_STEPS.md  OMEGA_THEORY_IMPLEMENTATION_REPORT.md  PHASE1_IMPLEMENTATION_REPORT.md  (+37 more)
.ait42/: README.md  config.yaml
.ait42/agents/: 00-ait42-coordinator-optimized.md  00-ait42-coordinator.md  config-manager.md  implementation-assistant.md  optimization-report-coordinator.md  reflection-agent-QUICK-REFERENCE.md  reflection-agent.md
.ait42/memory/: config.yaml  index.yaml  performance-metrics.json
.claude/: agents  memory
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
AIT42.app/Contents/: Info.plist
__mocks__/: fileMock.js
ait42-bin/: Cargo.toml
ait42-bin/src/: main.rs
benches/: buffer_bench.rs
crates/ait42-ait42/: Cargo.toml  README.md
crates/ait42-ait42/examples/: advanced_usage.rs  basic_usage.rs
crates/ait42-ait42/src/: commands.rs  config.rs  coordinator.rs  editor_integration.rs  error.rs  executor.rs  lib.rs  registry.rs  stream.rs  tmux.rs
crates/ait42-ait42/tests/: integration_tests.rs
crates/ait42-config/: Cargo.toml
crates/ait42-config/src/: defaults.rs  lib.rs  loader.rs  schema.rs  watch.rs
crates/ait42-core/: Cargo.toml
crates/ait42-core/src/: buffer.rs  command.rs  cursor.rs  editor.rs  error.rs  history.rs  lib.rs  mode.rs  selection.rs  state.rs  view.rs
crates/ait42-fs/: Cargo.toml
crates/ait42-fs/src/: directory.rs  file.rs  lib.rs  sync.rs  watcher.rs
crates/ait42-lsp/: Cargo.toml
crates/ait42-lsp/src/: client.rs  config.rs  lib.rs  manager.rs  position.rs
crates/ait42-session/: Cargo.toml  README.md  TEST_REPORT.md  run_tests.sh
crates/ait42-session/benches/: query_benchmarks.rs
crates/ait42-session/migrations/: 20250113_001_initial_schema.sql
crates/ait42-session/src/: error.rs  lib.rs
crates/ait42-session/src/db/: connection.rs  mod.rs  queries.rs
crates/ait42-session/src/models/: instance.rs  message.rs  mod.rs  session.rs
crates/ait42-session/src/repository/: mod.rs  sqlite.rs
crates/ait42-session/tests/: crud_tests.rs  db_connection_tests.rs  integration_tests.rs  migration_tests.rs  query_tests.rs  transaction_tests.rs
crates/ait42-session/tests/common/: mod.rs
crates/ait42-session/tests/fixtures/: sample_sessions.json
crates/ait42-tui/: Cargo.toml  README.md
crates/ait42-tui/src/: app.rs  event.rs  keybinds.rs  layout.rs  lib.rs  renderer.rs  terminal_executor.rs  theme.rs  tui_app.rs  ui.rs
crates/ait42-tui/src/state/: mod.rs
crates/ait42-tui/src/themes/: cursor.rs  default.rs  mod.rs  theme.rs
crates/ait42-tui/src/widgets/: command_palette.rs  editor.rs  mod.rs  sidebar.rs  statusline.rs  tab_bar.rs  terminal_panel.rs
crates/llm-estimator/: Cargo.toml  README.md
crates/llm-estimator/src/: anthropic_client.rs  cache.rs  error.rs  lib.rs  prompt_builder.rs  response_parser.rs
crates/llm-estimator/tests/: estimator_tests.rs
crates/omega-theory/: Cargo.toml  README.md
crates/omega-theory/src/: big_omega.rs  chaitins_omega.rs  lib.rs  prime_omega.rs
crates/omega-theory/tests/: complexity_tests.rs
docs/: BUG_FIX_COMPETITION_DIALOG_TIMEOUT.md  ENSEMBLE_TESTING.md  FIX_SUMMARY.md  INTEGRATION_TEST_REPORT.md  PHASE10B_IMPLEMENTATION_SUMMARY.md  PHASE10B_TEST_IMPLEMENTATION_COMPLETE.md  PHASE10_CURSOR_UI_IMPLEMENTATION.md  PHASE10_IMPLEMENTATION_SUMMARY.md  SESSION_HISTORY.md  TASK_3.1_IMPLEMENTATION_NOTES.md  TAURI_GUI_ARCHITECTURE.md  TAURI_IMPLEMENTATION_GUIDE.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_GUI.md  ARCHITECTURE_SUMMARY.md  COMPONENT_DESIGN.md  SECURITY_ARCHITECTURE.md
docs/archive/: BUG_FIX_REPORT.md  BUG_FIX_SESSION_WORKSPACE_VALIDATION.md  BUG_FIX_SUMMARY.md  DESIGN_PHASE_REPORT.md  RELEASE_NOTES.md
docs/guides/: RELEASE_QUICKSTART.md  USER_GUIDE.md
docs/implementation/: AB_TEST_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  (+7 more)
e2e/: phase1.spec.ts
editor/: COMPONENT_GUIDE.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
migrations/: 20250113_000000_initial_schema.sql  20250113_000001_add_denormalized_counts.sql  20250113_000002_add_fts_search.sql
scripts/: build.sh  generate_icon.py  prepare-release.sh  release.sh  run_tests.sh  setup.sh  svg-to-png.js  test.sh  tmux-parallel-agents.sh  tmux-single-agent.sh
src/: App.tsx  index.css  setupTests.ts
src-tauri/: Cargo.toml  bindings.d.ts  tauri.conf.json
src-tauri/icons/: README.md  icon-converter.html  icon.icns
src-tauri/src/: commands_old_backup.rs  lib.rs  main.rs  state.rs
src-tauri/src/ab_test/: keyword_strategy.rs  llm_strategy.rs  mod.rs  statistics.rs  test_cases.rs  tests.rs
src-tauri/src/commands/: ait42.rs  editor.rs  file.rs  file_tests.rs  git.rs  lsp.rs  mod.rs  optimizer.rs  optimizer_tests.rs  plugin.rs  session_history.rs  session_history_sqlite.rs  system.rs  terminal.rs  workspace.rs  worktree.rs
src-tauri/src/database/: migration.rs  mod.rs  queries.rs
src-tauri/src/optimizer/: instance_calculator.rs  mod.rs  subtask_optimizer.rs
src-tauri/src/optimizer/tests/: instance_tests.rs  mod.rs  optimizer_tests.rs
src-tauri/src/plugin/: mod.rs
src-tauri/src/tools/: backup.rs  mod.rs
src-tauri/src/utils/: ait42_installer.rs  mod.rs
tests/: integration_tests.rs  lib.rs
(+183 files in other folders)
