[package]
name = "ait42-editor"
version = "1.0.0"
description = "AIT42 Editor - GUI Application"
authors = ["AIT42 Team"]
edition = "2021"
rust-version = "1.91"

[lib]
name = "ait42_editor"
path = "src/lib.rs"

[[bin]]
name = "ait42-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1.5", features = [ "dialog-message", "dialog-open", "shell-open", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# AIT42 core crates
ait42-core = { path = "../crates/ait42-core" }
ait42-tui = { path = "../crates/ait42-tui", optional = true }
ait42-lsp = { path = "../crates/ait42-lsp" }
ait42-fs = { path = "../crates/ait42-fs" }
ait42-config = { path = "../crates/ait42-config" }
ait42-ait42 = { path = "../crates/ait42-ait42" }

# v1.6.0 optimizer crates
omega-theory = { path = "../crates/omega-theory" }
llm-estimator = { path = "../crates/llm-estimator" }

# LSP support
lsp-types = "0.95"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID support
uuid = { version = "1.6", features = ["serde", "v4"] }

# Date/time handling
chrono = "0.4"
dirs = "6.0.0"

# Clipboard support
clipboard = "0.5"
# Security fix: Force xcb to 1.6.0+ to avoid RUSTSEC-2025-0051
xcb = "1.6"

# Hashing for workspace identification
sha2 = "0.10"

[features]
default = ["custom-protocol", "terminal"]
custom-protocol = ["tauri/custom-protocol"]
terminal = ["ait42-tui"]

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
