[package]
name = "ait42-session"
version = "0.1.0"
edition = "2021"
description = "Session data management with SQLite persistence"
authors = ["AIT42 Team"]

[dependencies]
# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["serde", "v4"] }

# Hashing
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
tokio = { version = "1.35", features = ["test-util", "macros", "rt-multi-thread"] }
futures = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }

[lib]
name = "ait42_session"
path = "src/lib.rs"

[[bench]]
name = "query_benchmarks"
harness = false

[profile.test]
opt-level = 1

[profile.bench]
opt-level = 3
